[gd_scene load_steps=6 format=3 uid="uid://ckubiwex3xt8f"]

[ext_resource type="Script" path="res://main.gd" id="1_2ci2l"]
[ext_resource type="Texture2D" uid="uid://b2ue62v5qy8sp" path="res://icon.svg" id="2_4woc2"]

[sub_resource type="Animation" id="Animation_fpcm1"]
resource_name = "Clicked"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 2, 3),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 2, 3),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chek8"]
_data = {
"Clicked": SubResource("Animation_fpcm1")
}

[sub_resource type="LabelSettings" id="LabelSettings_r3x6t"]
font_size = 48
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ci2l")
metadata/_edit_lock_ = true

[node name="Godot" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(256, 256)
action_mode = 0
texture_normal = ExtResource("2_4woc2")

[node name="GodotAnim" type="AnimationPlayer" parent="Godot"]
libraries = {
"": SubResource("AnimationLibrary_chek8")
}

[node name="Amount" type="Label" parent="."]
layout_mode = 1
offset_left = 8.0
offset_right = 9.0
offset_bottom = 88.0
label_settings = SubResource("LabelSettings_r3x6t")

[node name="UpClick" type="Button" parent="."]
layout_mode = 0
offset_left = 921.0
offset_top = 249.0
offset_right = 1076.0
offset_bottom = 280.0
text = "Upgrade Clicks (10)"

[node name="Mult" type="LineEdit" parent="UpClick"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
placeholder_text = "Amount to buy"

[node name="UpAuto" type="Button" parent="UpClick"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 96.0
offset_right = 100.0
offset_bottom = 127.0
grow_horizontal = 2
text = "Upgrade AutoClicker (10)"

[node name="Mult" type="LineEdit" parent="UpClick/UpAuto"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
placeholder_text = "Amount to buy"

[node name="ClickPwr" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -50.0
offset_right = -8.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "Points per click: 1"
horizontal_alignment = 2

[node name="Autorate" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -26.0
offset_right = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Clicks per second: 0"
horizontal_alignment = 2

[connection signal="pressed" from="Godot" to="." method="_on_godot_pressed"]
[connection signal="pressed" from="UpClick" to="." method="_on_up_click_pressed"]
[connection signal="pressed" from="UpClick/UpAuto" to="." method="_on_up_auto_pressed"]
